# geesun_agent

./: .commit_msg  .env  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  run_audit.sh  run_audit_now.py
certs/: cube-ca.pem
memories/default/: audit_history.md
skills/__agent__/weather-checker/scripts/: weather_query.py
skills/plc-code-auditor/: SKILL-报告格式.md  SKILL.md
skills/plc-code-auditor/references/: audit-standards.md  naming-conventions.md  updated-instructions-v2.md  updated-instructions.md
skills/plc-code-auditor/scripts/: patch_reverse_col.py  plc_audit.py  plc_audit.py.20250420.001.bak  plc_audit.py.20260422.001.bak  plc_audit.py.bak.20250324.001  plc_audit_full.py  plc_extract.py
src/: init_agent.py  init_model.py  profile.py  server.py  test_cubesandbox.py  test_from_e2b.py
src/api/: deps.py  router.py
src/api/endpoints/: auth.py  chat.py  files.py  models.py  sessions.py  skills.py  upload.py
src/core/: auth.py  config.py  logging.py  mcp.py  model.py
src/core/prompts/: plc_auditor.py
src/infra/: database.py  sandbox.py
src/services/: agent.py
tests/api/: api.http
tests/core/: test_config.py
tests/infra/: test_cubesandbox.py  test_from_e2b.py  test_network.py
